2000-05-07  Matt Loper  <matt@helixcode.com>

	* folder-browser-factory.c: Changed a toolbar button from saying
	"New mail" (which suggests you might be composing new mail) to
	"Get mail".

2000-05-06  Dan Winship  <danw@helixcode.com>

	* folder-browser-factory.c (folder_browser_factory): Don't
	hardcode "inbox" here.

	* folder-browser.c (folder_browser_set_uri): Don't hardcode
	"inbox" here either.
	(folder_browser_load_folder): Create a new store according to the
	folder browser's URI, and load the mbox file from that store.
	Parts of this are temporary.

	* session.c, mail.h: There is no longer a global store, just a
	global session.

	* mail-config.c, mail-ops.c: Update for default_session -> session
	change. fetch_mail is currently broken.

2000-05-06  Dan Winship  <danw@helixcode.com>

	* mail-config.c: New code to configure identity, mail source, and
	mail transport.
	(mail_config_druid): A druid using the config widgets. (Only
	allows configuration of a single identity, source, and transport.)

	* mail-ops.c (check_configured): New function to make sure the
	user has configured stuff, and call the	druid if not.
	(fetch_mail, send_msg, send_to_url, reply, forward_msg): Call
	check_configured
	(composer_send_cb): Make this pass the message to a CamelTransport
	rather than just printing it to stdout.

	* folder-browser-factory.c (development_warning): Add a warning
	about sending mail, since you can do that now.

2000-05-06  Chris Toshok  <toshok@HelixCode.com>

	* .cvsignore: ignore evolution-mail.pure

	* Makefile.am: add support for building evolution-mail.pure

2000-05-06  Dan Winship  <danw@helixcode.com>

	* mail.h: consolidate mail-format.h, mail-identify.h, mail-ops.h,
	main.h and session.h into this new file. There's no reason to have
	a .h for every .c.

2000-05-05  Anders Carlsson  <andersca@gnu.org>

	* test-mail.c (create_container): Use the OAFIID when using an 
	OAF-enabled build of bonobo.

2000-05-04  NotZed  <NotZed@HelixCode.com>
